# OMXWatcher

./: .ghci  .gitignore  LICENSE  OMXWatcher.cabal  README.md  TODO.txt  stack.yaml
app/: Main.hs  Plotter.hs
src/: Omxwatcher.hs  Plotter.hs
src/OMXWatcher/: Chart.hs  Csv.hs  Indicator.hs  Types.hs
test/: Main.hs
test/OMXWatcher/: IndicatorTest.hs
testres/: SEB-C-2016-10-10-2017-10-06.csv  SEB-C-2017-08-23-2017-09-22.csv  omx.html
