name:                OMXWatcher
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/patriques82/OMXWatcher#readme
license:             BSD3
license-file:        LICENSE
author:              Patrik Nygren
maintainer:          patriknygren82@gmail.com
copyright:           2017 Patrik Nygren
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable omxwatcher
  hs-source-dirs:      src
  main-is:             Omxwatcher.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -main-is Omxwatcher
  build-depends:       base
                     , bytestring
                     , OMXWatcher
                     , scalpel
                     , split
                     , tagsoup
                     , text
  default-language:    Haskell2010

executable marketsim
  hs-source-dirs:      src
  main-is:             Marketsim.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -main-is Marketsim
  build-depends:       base
                     , OMXWatcher
                     , http-client-tls >= 0.3
                     , servant-client >= 0.11
                     , yahoo-finance-api
  default-language:    Haskell2010

executable plotter
  hs-source-dirs:      src
  main-is:             Plotter.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -main-is Plotter
  build-depends:       base
                     , bytestring
                     , vector
                     , cassava
                     , split
                     , time
                     , Chart
                     , Chart-gtk
                     , Chart-cairo
  default-language:    Haskell2010

test-suite OMXWatcher-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , OMXWatcher
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/patriques82/OMXWatcher
